--- a/index.html
+++ b/index.html
@@ -3,7 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaysha Designs</title>
+    <title>Kaysha Designs - Stylish, Modest & Comfortable Wear</title>
+    <meta
+      name="description"
+      content="Kaysha Designs offers stylish, modest, and comfortable wear. Follow us on Instagram for the latest updates!"
+    />
+    <link rel="icon" type="image/x-icon" href="images/web/favicon.ico" />
+    <link rel="apple-touch-icon" href="images/web/apple-touch-icon.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kaysha-designs.com/" />
+    <meta
+      property="og:title"
+      content="Kaysha Designs - Stylish, Modest & Comfortable Wear"
+    />
+    <meta
+      property="og:description"
+      content="Discover stylish, modest, and comfortable wear at Kaysha Designs. Follow us on Instagram for the latest collections!"
+    />
+    <meta property="og:image" content="images/Logo_KD.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kaysha-designs.com/" />
+    <meta
+      property="twitter:title"
+      content="Kaysha Designs - Stylish, Modest & Comfortable Wear"
+    />
+    <meta
+      property="twitter:description"
+      content="Discover stylish, modest, and comfortable wear at Kaysha Designs. Follow us on Instagram for the latest collections!"
+    />
+    <meta property="twitter:image" content="images/Logo_KD.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Roboto&display=swap"
       rel="stylesheet"
@@ -24,18 +56,16 @@
           #94b9ff
         ); /* Gradient background */
         background-size: cover;
-        background-attachment: fixed; /* Optional: Fixed background for scrolling effect */
         position: relative;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        padding: 20px 0;
       }
       .container {
         max-width: 800px;
         margin: 0 auto;
         padding: 40px 20px;
         text-align: center;
+        width: 100%;
+        box-sizing: border-box;
       }
 
       h1 {
@@ -76,14 +106,84 @@
       .logo {
         width: 50%;
         margin-bottom: 20px;
+        max-width: 300px;
       }
 
-      @media (max-width: 600px) {
+      .share-section {
+        margin: 30px 0;
+        padding: 20px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 15px;
+        backdrop-filter: blur(10px);
+      }
+
+      .share-buttons {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+        flex-wrap: wrap;
+        margin-top: 15px;
+      }
+
+      .share-btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 10px 15px;
+        background: rgba(139, 0, 139, 0.9);
+        color: white;
+        text-decoration: none;
+        border-radius: 25px;
+        font-size: 0.9em;
+        transition: all 0.3s ease;
+        border: 2px solid transparent;
+      }
+
+      .share-btn:hover {
+        background: rgba(160, 50, 160, 1);
+        transform: translateY(-2px);
+        box-shadow: 0 4px 15px rgba(139, 0, 139, 0.3);
+      }
+
+      @media (max-width: 768px) {
+        .container {
+          padding: 20px 15px;
+        }
         h1 {
-          font-size: 2em;
+          font-size: 2.2em;
         }
         .tagline {
           font-size: 1.1em;
+        }
+        .logo {
+          width: 70%;
+        }
+        .share-buttons {
+          flex-direction: column;
+          align-items: center;
+        }
+        .share-btn {
+          width: 100%;
+          max-width: 250px;
+          justify-content: center;
+        }
+      }
+
+      @media (max-width: 480px) {
+        h1 {
+          font-size: 1.8em;
+        }
+        .tagline {
+          font-size: 1em;
+        }
+        .logo {
+          width: 80%;
+        }
+        .button {
+          width: 100%;
+          max-width: 250px;
+          margin: 8px 0;
+          padding: 15px 20px;
         }
       }
     </style>
@@ -91,23 +191,88 @@
   <body class="background">
     <div class="container">
       <!-- Optional Logo -->
-      <img src="kaysha_logo.png" alt="kaysha_designs" class="logo" />
+      <img src="images/Logo_KD.png" alt="kaysha_designs" class="logo" />
 
       <h1>Welcome to Kaysha Designs</h1>
-      <p class="tagline">✨ Grace in every thread</p>
+      <p class="tagline">✨ Stylish | Modest | Comfortable Wear ✨</p>
+
+      <h3>Website coming soon... Till then follow us on Instagram</h3>
 
       <a
         href="https://www.instagram.com/kaysha_designs/"
         class="button"
         target="_blank"
-        >Follow on Instagram</a
+        >📱 Follow on Instagram</a
       >
-      <a href="tel:+918237474507" class="button">Call Us</a>
+      <a href="tel:+918237474507" class="button">📞 Call Us</a>
+      <a href="mailto:kayshadesigns10@gmail.com" class="button">✉️ Email Us</a>
 
+      <div class="share-section">
+        <h3>Share Kaysha Designs</h3>
+        <div class="share-buttons">
+          <a
+            href="https://wa.me/message/YVJGIK27QK4HK1"
+            class="share-btn"
+            target="_blank"
+            title="Chat on WhatsApp"
+          >
+            📱 WhatsApp
+          </a>
+          <a
+            href="https://www.facebook.com/profile.php?id=61577706163193"
+            class="share-btn"
+            target="_blank"
+            title="Follow on Facebook"
+          >
+            📘 Facebook
+          </a>
+          <a
+            href="#"
+            class="share-btn"
+            onclick="shareOnTwitter()"
+            title="Share on Twitter"
+          >
+            🐦 Twitter
+          </a>
+          <a
+            href="#"
+            class="share-btn"
+            onclick="shareGeneral()"
+            title="Share this page"
+          >
+            📤 Share
+          </a>
+        </div>
+      </div>
       <footer>
-        <p>📍 Modestwear for modern women | Made in India</p>
         <p>&copy; 2025 Kaysha Designs</p>
       </footer>
     </div>
+    <script>
+      function shareOnTwitter() {
+        const text =
+          "Check out Kaysha Designs - Stylish, Modest & Comfortable Wear! 🌸 #KayshaDesigns #Fashion";
+        const url = encodeURIComponent(window.location.href);
+        const tweetUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(
+          text
+        )}&url=${url}`;
+        window.open(tweetUrl, "_blank", "width=600,height=400");
+      }
+
+      function shareGeneral() {
+        if (navigator.share) {
+          navigator.share({
+            title: 'Kaysha Designs - Stylish, Modest & Comfortable Wear',
+            text: 'Check out Kaysha Designs for stylish, modest, and comfortable wear!',
+            url: window.location.href
+          }).catch(console.error);
+        } else {
+          // Fallback for browsers that don't support Web Share API
+          const text = "Check out Kaysha Designs - Stylish, Modest & Comfortable Wear! Website: " + window.location.href;
+          const shareUrl = `https://wa.me/?text=${encodeURIComponent(text)}`;
+          window.open(shareUrl, "_blank");
+        }
+      }
+    </script>
   </body>
 </html>
