--- a/index.html
+++ b/index.html
@@ -314,11 +314,13 @@
           <h3>Scan QR Code to Pay</h3>
           <img src="images/UPI_ID.png" alt="UPI QR Code" class="qr-image" />
           <div class="upi-id">karish.shaikh25-2@okaxis</div>
-          <p style="margin-top: 15px; color: #666; font-size: 0.9em;">Or tap the button below on mobile</p>
+          <p style="margin-top: 15px; color: #666; font-size: 0.9em">
+            Or tap the button below on mobile
+          </p>
           <a
             href="upi://pay?pa=karish.shaikh25-2@okaxis&pn=Kaysha%20Designs&cu=INR"
             class="button"
-            style="margin-top: 10px; font-size: 0.9em;"
+            style="margin-top: 10px; font-size: 0.9em"
             >Open UPI App</a
           >
         </div>
@@ -396,11 +398,11 @@
       }
 
       function showQR() {
-        document.getElementById('qrPopup').classList.add('show');
+        document.getElementById("qrPopup").classList.add("show");
       }
 
       function hideQR() {
-        document.getElementById('qrPopup').classList.remove('show');
+        document.getElementById("qrPopup").classList.remove("show");
       }
     </script>
   </body>
