--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
       function hideQR() {
         document.getElementById("qrPopup").classList.remove("show");
       }
+      // console .print
     </script>
   </body>
 </html>
