--- a/index.html
+++ b/index.html
@@ -86,20 +86,21 @@
         display: inline-block;
         margin: 10px;
         padding: 12px 20px;
-        background-color: #4a5568;
-        color: white;
+        background-color: #f7fafc;
+        color: #2d3748;
         text-decoration: none;
         border-radius: 8px;
         transition: all 0.3s ease;
-        border: 1px solid #e2e8f0;
+        border: 2px solid #e2e8f0;
         font-weight: 500;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
 
       .button:hover {
-        background-color: #2d3748;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        background-color: #edf2f7;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         transform: translateY(-1px);
+        border-color: #cbd5e0;
       }
 
       footer {
@@ -116,29 +117,34 @@
 
       .upi-button {
         position: relative;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
+        background: #f7fafc;
+        color: #2d3748;
         padding: 15px 25px;
         font-size: 1.1em;
         font-weight: 600;
-        border: none;
+        border: 2px solid #e2e8f0;
         border-radius: 12px;
         cursor: pointer;
         transition: all 0.3s ease;
-        box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
-        text-transform: uppercase;
-        letter-spacing: 1px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        text-transform: none;
+        letter-spacing: 0.5px;
+        min-height: 48px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .upi-button:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 8px 25px rgba(102, 126, 234, 0.6);
-        background: linear-gradient(135deg, #5a67d8 0%, #6b46c1 100%);
+        transform: translateY(-1px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        background: #edf2f7;
+        border-color: #cbd5e0;
       }
 
       .upi-button:active {
         transform: translateY(0);
-        box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
 
       .qr-popup {
@@ -219,21 +225,22 @@
         align-items: center;
         gap: 8px;
         padding: 10px 15px;
-        background: #718096;
-        color: white;
+        background: #f7fafc;
+        color: #2d3748;
         text-decoration: none;
         border-radius: 8px;
         font-size: 0.9em;
         transition: all 0.3s ease;
-        border: 1px solid #e2e8f0;
+        border: 2px solid #e2e8f0;
         font-weight: 500;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
 
       .share-btn:hover {
-        background: #4a5568;
+        background: #edf2f7;
         transform: translateY(-1px);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        border-color: #cbd5e0;
       }
 
       @media (max-width: 768px) {
@@ -282,6 +289,24 @@
           max-width: 250px;
           margin: 8px 0;
           padding: 15px 20px;
+        }
+        
+        .upi-button {
+          width: 100%;
+          max-width: 280px;
+          margin: 8px 0;
+          padding: 16px 20px;
+          font-size: 1em;
+          min-height: 52px;
+        }
+
+        .qr-content .button {
+          width: calc(100% - 20px);
+          max-width: none;
+          margin: 10px 0;
+          font-size: 0.85em;
+          padding: 12px 15px;
+          box-sizing: border-box;
         }
       }
     </style>
